refactor: Extract FEN and UCI validation/conversion into dedicated classes and remove PGN/SAN export/load functionality.